# ClientBottleAPI

./: .env.template  API-behavior.txt  Dockerfile  alembic.ini  docker-compose.yml  invite.txt  preprocess.py  pyproject.toml  recover-password.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2024-06-23_1719111426_70768ce0faa5_create_functions.py  2024-06-23_1719165998_002860eaf021_first_tables.py  2024-06-29_1719631524_dc7000d3f930_user_token_table.py  2024-07-28_1722200276_9e41d799f14a_add_invite_table.py  2024-08-04_1722792865_c9a3252600bb_add_recover_password_table.py  2024-08-04_1722798836_f5058c00fe1a_update_current_timestamp_brazil_default.py  2024-08-18_1723947753_933fc3a811b3_new_functions.py  2024-08-19_1724029659_a5b3d34b5fde_update_client_bottle_transaction.py  2024-09-23_1727084629_53a70f304619_update_client_table.py
exec/: healthcheck.sh  start.sh
exec/start/: api.sh
script/: _reset_data.sql
server/: __init__.py
server/configuration/: __init__.py  database.py  environment.py  middleware.py
server/controller/: auth_controller.py  bottle_brand_controller.py  invite_controller.py  recover_password_controller.py  server_controller.py  transaction_controller.py
server/lib/: __init__.py  auth.py  context.py  dependencies.py  error.py  exceptions.py  logger.py  utils.py
server/model/: __init__.py  bottle.py  bottle_brand.py  client.py  client_bottle_transaction.py  invite.py  meta.py  recover_password.py  role.py  user.py  user_token.py
server/repository/: auth_repository.py  bottle_brand_repository.py  (+2 more)
(+21 files in other folders)
